Now linking to RSS feed and other things

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -7,6 +7,7 @@
 	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk"/>
 	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/sky.ico"/>
 	<link rel="stylesheet" type="text/css" href="{DOC_ROOT}/static/style.css"/>
+	<link rel="alternate" type="application/rss+xml" href="{DOC_ROOT}/rss.xml" title="{SITE_TITLE}"/>
 	<script src="{DOC_ROOT}/static/script.js"></script>
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
@@ -22,6 +23,7 @@
 			<li><a href="{GIT_REMOTE}">my github</a></li>
 			<li><a href="{DOC_ROOT}/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="{DOC_ROOT}/notes/index.htm">my notes</a></li>
+			<li><a href="{DOC_ROOT}/rss.xml">rss <img class="icon" src="{DOC_ROOT}/static/button/rss.svg"/></a></li>
 		</ul>
 	</div>
 </div>
