--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
 	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk"/>
 	<link rel="shortcut icon" type="image/x-icon" href="/static/sky.ico"/>
 	<link rel="stylesheet" type="text/css" href="/static/style.css"/>
+	<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="sentimental µsounds"/>
 	<script src="/static/script.js"></script>
 	<title>Homepage | sentimental µsounds</title>
 </head>
@@ -22,11 +23,12 @@
 			<li><a href="https://github.com/microsounds">my github</a></li>
 			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">my notes</a></li>
+			<li><a href="/rss.xml">rss <img class="icon" src="/static/button/rss.svg"/></a></li>
 		</ul>
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.5.5 — static microblog processor-->
+<!--kagami v0.6 — static microblog processor-->
 <h1>Homepage</h1>
 <!-- stylesheet override -->
 <!-- prevent borders around transparent inline images on this page only -->
@@ -103,7 +105,7 @@ I just really like metaprogramming.</p>
 <div class="footer">
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
 	— &copy; 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
-	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.5.5 — static microblog processor</a></p>
+	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
 </body>
