--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="theme-color" content="{ACCENT_COLOR}"/>
+	<meta name="description" content="{SITE_DESCRIPTION}"/>
+	<meta name="keywords" content="{KEYWORDS}"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="google-site-verification" content="Yn_X0a7RyXs1GuMzbXL2g3P-tH1A29W_6yyG6M8oBnk"/>
 	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/sky.ico"/>
