Added SVG validator icons

--- a/index.htm
+++ b/index.htm
@@ -95,7 +95,7 @@ I just really like metaprogramming.</p>
 <a href="https://www.youtube.com/watch?v=KGD-mFTY6mw"><img src="/static/button/konata.gif" alt="konata" /></a>
 <a href="/eeeeeeeeeeeeeeeeee"><img src="/static/button/88x31pinkmarble.gif" alt="filler1" /></a>
 <a href="https://validator.w3.org/check/referer"><img src="/static/button/valid-html5-blue.svg" alt="html" /></a>
-<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="/static/button/valid-css-blue.png" alt="css" /></a>
+<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="/static/button/valid-css-blue.svg" alt="css" /></a>
 <a href="https://creativecommons.org/licenses/by-sa/4.0"><img src="/static/button/cc.png" alt="cc" /></a>
 <a href="https://www.gnu.org/licenses/gpl-3.0"><img src="/static/button/gpl.png" alt="gpl" /></a></p>
 </div>
