Added hit counter

--- a/.kagami/tail.htm
+++ b/.kagami/tail.htm
@@ -1,5 +1,10 @@
 <hr/>
 <div class="footer">
+	<span class="right" style="opacity: 60%;">
+		<a href="https://www.cutercounter.com/">
+			<img src="https://www.cutercounter.com/hits.php?id=huxaanfp&nd=6&style=15" alt="visitor counter"/>
+		</a>
+	</span>
 	<p>written materials <a href="{CC_BY_SA}">CC BY-SA 4.0</a>, source code <a href="{GNU_GPL}">GNU GPLv3+</a>
 	— &copy; {YEAR} {AUTHOR} &lt;<a href="{GIT_REMOTE}">{GIT_REMOTE}</a>&gt;<br/>
 	Powered by <a href="{GIT_REMOTE}/kagami">{VERSION}</a></p>
