Switched site counter provider

--- a/.kagami/tail.htm
+++ b/.kagami/tail.htm
@@ -1,8 +1,10 @@
 <hr/>
 <div class="footer">
-	<span class="right" style="opacity: 60%;">
-		<a href="https://www.cutercounter.com/">
-			<img src="https://www.cutercounter.com/hits.php?id=huxaanfp&nd=6&style=15" alt="visitor counter"/>
+	<span class="right" style="padding-left: 5px">
+		<a title="visitor counter" href="https://digits.net">
+			<img style="height: 1.3em;" alt="counter"
+				src="https://counter.digits.net/?counter={c670b40d-4ee8-9e24-9d82-2ee79a5b1f54}&template=simple&background=647975&charset=25"/>
+			vistors
 		</a>
 	</span>
 	<p>written materials <a href="{CC_BY_SA}">CC BY-SA 4.0</a>, source code <a href="{GNU_GPL}">GNU GPLv3+</a>
