--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/sky.ico"/>
 	<link rel="stylesheet" type="text/css" href="{DOC_ROOT}/static/style.css"/>
 	<link rel="alternate" type="application/rss+xml" href="{DOC_ROOT}/rss.xml" title="{SITE_TITLE}"/>
-	<script src="{DOC_ROOT}/static/script.js"></script>
+	<script type="text/javascript" src="{DOC_ROOT}/static/script.js"></script>
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
 <body>
