--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -848,7 +848,7 @@ lrwxrwxrwx 1   27  .local/lib/path-gitstatus -> ../../Scripts/git_status.sh
 	<span class="right" style="padding-left: 5px">
 		<a title="visitor counter" href="https://digits.net">
 			<img style="height: 1.3em;" alt="counter"
-				src="https://counter.digits.net/?counter={c670b40d-4ee8-9e24-9d82-2ee79a5b1f54}&template=simple&background=647975&charset=25"/>
+				src="https://counter.digits.net/?counter=%7Bc670b40d-4ee8-9e24-9d82-2ee79a5b1f54%7D&template=simple&background=647975&charset=25"/>
 			vistors
 		</a>
 	</span>
