--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -289,7 +289,7 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 	<span class="right" style="padding-left: 5px">
 		<a title="visitor counter" href="https://digits.net">
 			<img style="height: 1.3em;" alt="counter"
-				src="https://counter.digits.net/?counter={c670b40d-4ee8-9e24-9d82-2ee79a5b1f54}&template=simple&background=647975&charset=25"/>
+				src="https://counter.digits.net/?counter=%7Bc670b40d-4ee8-9e24-9d82-2ee79a5b1f54%7D&template=simple&background=647975&charset=25"/>
 			vistors
 		</a>
 	</span>
