Fixed thematic break

--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@ I just really like metaprogramming.</p>
 <p>It’s a never-ending process.</p>
 <p><a href="notes/dotfiles.htm" title="It's pretty fun though."><img src="/static/shimemiku/shime32.png" alt="scripts" /></a></p>
 </div>
-<p><hr style="width: 40%;"/></p>
+<hr style="width: 40%;"/>
 <h2>Things I’ve made recently</h2>
 <ul>
 <li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="/notes/dotfiles.htm"><code>microsounds/atelier</code></a>
