--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="theme-color" content="{ACCENT_COLOR}"/>
