Added draft article on copyleft, typos

--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@ I just really like metaprogramming.</p>
 <li><em>A user-extensible macro preprocessor and static webpage generator for blog sites like this one.</em></li>
 </ul>
 </li>
-<li><em>(2019–present)</em> this website and it’s <code>kagami</code> template — <a href="https://github.com/microsounds/microsounds.github.io"><code>microsounds/microsounds.github.io</code></a></li>
+<li><em>(2019–present)</em> this website and its <code>kagami</code> template — <a href="https://github.com/microsounds/microsounds.github.io"><code>microsounds/microsounds.github.io</code></a></li>
 </ul>
 <h2>Old projects</h2>
 <ul>
