--- a/.kagami/tail.htm
+++ b/.kagami/tail.htm
@@ -1,7 +1,7 @@
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
-		<a title="visitor counter" href="https://digits.net">
+		<a title="visitors since 2022" href="https://digits.net">
 			<img style="height: 1.3em;" alt="counter"
 				src="https://counter.digits.net/?counter=%7Bc670b40d-4ee8-9e24-9d82-2ee79a5b1f54%7D&amp;template=simple&amp;background=647975&amp;charset=25"/>
 			vistors
