XHTML5 validation changes

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -14,7 +14,7 @@
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
 <body>
-<audio hidden id="bgm"></audio>
+<audio hidden="hidden" id="bgm"></audio>
 <div class="navbar">
 	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"/></a>
 	<div class="container">
