--- a/.kagami/tail.htm
+++ b/.kagami/tail.htm
@@ -8,7 +8,7 @@
 		</a>
 	</span>
 	<p>written materials <a href="{CC_BY_SA}">CC BY-SA 4.0</a>, source code <a href="{GNU_GPL}">GNU GPLv3+</a>
-	— &copy; {YEAR} {AUTHOR} &lt;<a href="{GIT_REMOTE}">{GIT_REMOTE}</a>&gt;<br/>
+	— &#169; {YEAR} {AUTHOR} &lt;<a href="{GIT_REMOTE}">{GIT_REMOTE}</a>&gt;<br/>
 	Powered by <a href="{GIT_REMOTE}/kagami">{VERSION}</a></p>
 </div>
 </div> <!-- end of content -->
