changed wording in projects section

--- a/index.htm
+++ b/index.htm
@@ -65,7 +65,7 @@ I just really like metaprogramming.</p>
 </li>
 <li><em>(2019–present)</em> this website and its <code>kagami</code> template — <a href="https://github.com/microsounds/microsounds.github.io"><code>microsounds/microsounds.github.io</code></a>
 <ul>
-<li><em><span id="gh-update">Refer to the <a href="https://github.com/microsounds/microsounds.github.io/commits"><code>git</code> changelog</a> or <a href="https://microsounds.github.io/rss.xml">RSS feed</a> for recent updates.</span></em></li>
+<li><em><span id="gh-update">View the <a href="https://github.com/microsounds/microsounds.github.io/commits"><code>git</code> changelog</a> or <a href="https://microsounds.github.io/rss.xml">RSS feed</a> to see most recent changes.</span></em></li>
 </ul>
 </li>
 </ul>
