--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -30,24 +30,25 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.6.1 — static microblog processor-->
+<!--kagami v0.6.2 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
-<p><strong>Revision No. 801, commit <code>9e4075f</code>.</strong></p>
-<p><strong>“CI: Style changes, reinstating pull request CI/CD, documentation”</strong></p>
+<p><strong>Revision No. 802, commit <code>6247ddf</code>.</strong></p>
+<p><strong>“Nothing important”</strong></p>
 <p><div class="toc"><p>Table of Contents</p><ul><li><a href="#Selected-documentation-and-usage-notes-for-my-dotfiles">Selected documentation and usage notes for my dotfiles</a></li><li><a href="#_dotfilesatelier_"><em>dotfiles—“atelier”</em></a></li><li><a href="#Quick-start">Quick start</a><ul><li><a href="#Quick-start-on-Termux-for-Android">Quick start on Termux for Android</a></li><li><a href="#Notes-on-platform-support">Notes on platform support</a></li></ul></li><li><a href="#Usage-notes">Usage notes</a><ul><li><a href="#Using-git-meta">Using <code>git meta</code></a></li><li><a href="#Using-.once.d-post-install-scripts">Using <code>~/.once.d</code> post-install scripts</a><ul><li><a href="#Essential-and-optional-package-groups">Essential and *optional package groups</a></li><li><a href="#Essential-and-persistent-upstream-utilities">Essential and *persistent upstream utilities</a></li></ul></li><li><a href="#Window-manager">Window manager</a><ul><li><a href="#Reduced-layout-for-Chromebooks">Reduced layout for Chromebooks</a></li></ul></li></ul></li><li><a href="#Some-environment-notes">Some environment notes</a><ul><li><a href="#X-server-invocation">X server invocation</a></li><li><a href="#Optional-X-Window-configuration">Optional X Window configuration</a><ul><li><a href="#.xrandr"><code>~/.xrandr</code></a></li><li><a href="#.xdecor"><code>~/.xdecor</code></a></li></ul></li><li><a href="#X-resources-and-theming">X resources and theming</a><ul><li><a href="#List-of-available-macros">List of available macros</a></li></ul></li><li><a href="#Issues-with-HiDPI-scaling">Issues with HiDPI scaling</a></li></ul></li><li><a href="#Non-standard-commands">Non-standard commands</a><ul><li><a href="#cd"><code>cd</code></a></li><li><a href="#chromium"><code>chromium</code></a><ul><li><a href="#Managed-policy-overrides">Managed policy overrides</a></li><li><a href="#Configuring-Vimium">Configuring Vimium</a></li><li><a href="#An-ongoing-experiment">An ongoing experiment</a></li></ul></li><li><a href="#git"><code>git</code></a></li><li><a href="#nano"><code>nano</code></a></li><li><a href="#notify-send"><code>notify-send</code></a></li><li><a href="#sc-spreadsheet-calculator"><code>sc</code> (spreadsheet calculator)</a><ul><li><a href="#sc-pre-run-macro-example"><code>sc</code> pre-run macro example</a></li></ul></li></ul></li><li><a href="#Downloads">Downloads</a></li><li><a href="#Complete-source-listing">Complete source listing</a></li></ul></div></p>
 <p>The verbosity factor of this document compared to comment lines of code
 in this repo is about <strong>5:1</strong>.</p>
 <p>If this document is <em>21.9KiB</em> in
 size, and the approximate size of all comment lines of code is
 <em>59.1KiB</em> then this document
-currently covers about <b style="font-size: 130%;">7.40%</b>
+currently covers about <b style="font-size: 130%;">7.42%</b>
 of all implemented features and behavior in this repository.
 This is just an <a href="https://github.com/microsounds/microsounds.github.io/raw/master/.scripts/dotfiles-ls.sh">automated guess</a> though.</p>
 <p>This document and repository is also mirrored at
 <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on GitHub.</p>
-<p>Last updated 🌔 Fri, Feb 25th, 2022.</p>
+<p>Last updated 🌔 Sat, Feb 26th, 2022.</p>
 <!-- header and github badges -->
-<h1><div align="center"><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime55.png" alt="shimeji" /></div><span id="_dotfilesatelier_"></span></h1>
+<!-- github readmes only support align attributes for styling -->
+<h1><div align="center"><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime1.png" alt="shimeji" /></div><span id="_dotfilesatelier_"></span></h1>
 <div align="center">
 <p><img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github" alt="ico-freq" />
 <img src="https://img.shields.io/github/repo-size/microsounds/atelier?logo=github" alt="ico-size" />
@@ -106,7 +107,7 @@ $ exec $SHELL -l
 </ol>
 <!-- figure 2: mobile screenshot -->
 <a href="https://raw.githubusercontent.com/microsounds/microsounds/master/dotfiles/mobile-scrot.jpg">
-	<img width="125px" align="right" src="https://raw.githubusercontent.com/microsounds/microsounds/master/dotfiles/mobile-scrot2.png"/>
+	<img width="125" align="right" src="https://raw.githubusercontent.com/microsounds/microsounds/master/dotfiles/mobile-scrot2.png"/>
 </a>
 <h2>Quick start on Termux for Android<span id="Quick-start-on-Termux-for-Android"></span></h2>
 <blockquote>
@@ -236,141 +237,141 @@ Primary modkey <code>Mod1</code> is super instead of alt.</p>
 <table>
 <thead>
 <tr>
-<th align="right">shift +</th>
-<th align="right">alt +</th>
-<th align="left">key</th>
+<th style="text-align: right">shift +</th>
+<th style="text-align: right">alt +</th>
+<th style="text-align: left">key</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="right"></td>
-<td align="right">kill window</td>
-<td align="left">F4</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">kill window</td>
+<td style="text-align: left">F4</td>
 </tr>
 <tr>
-<td align="right">counter-clockwise</td>
-<td align="right">switch focused window</td>
-<td align="left">tab</td>
+<td style="text-align: right">counter-clockwise</td>
+<td style="text-align: right">switch focused window</td>
+<td style="text-align: left">tab</td>
 </tr>
 <tr>
-<td align="right"><strong>shift +</strong></td>
-<td align="right"><strong>super +</strong></td>
-<td align="left"><strong>key</strong></td>
+<td style="text-align: right"><strong>shift +</strong></td>
+<td style="text-align: right"><strong>super +</strong></td>
+<td style="text-align: left"><strong>key</strong></td>
 </tr>
 <tr>
-<td align="right">float window<sup>[toggle]</sup></td>
-<td align="right">monocle window<sup>[toggle]</sup></td>
-<td align="left">space</td>
+<td style="text-align: right">float window<sup>[toggle]</sup></td>
+<td style="text-align: right">monocle window<sup>[toggle]</sup></td>
+<td style="text-align: left">space</td>
 </tr>
 <tr>
-<td align="right">set as master window<sup>[toggle]</sup></td>
-<td align="right">terminal</td>
-<td align="left">return</td>
+<td style="text-align: right">set as master window<sup>[toggle]</sup></td>
+<td style="text-align: right">terminal</td>
+<td style="text-align: left">return</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right">launcher</td>
-<td align="left">p</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">launcher</td>
+<td style="text-align: left">p</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right">file manager</td>
-<td align="left">e</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">file manager</td>
+<td style="text-align: left">e</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right">ssh-add<sup>[toggle]</sup></td>
-<td align="left">backspace</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">ssh-add<sup>[toggle]</sup></td>
+<td style="text-align: left">backspace</td>
 </tr>
 <tr>
-<td align="right">partial screenshot</td>
-<td align="right">screenshot</td>
-<td align="left">print</td>
+<td style="text-align: right">partial screenshot</td>
+<td style="text-align: right">screenshot</td>
+<td style="text-align: left">print</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right"><em>reserved</em></td>
-<td align="left">scroll lock</td>
+<td style="text-align: right"></td>
+<td style="text-align: right"><em>reserved</em></td>
+<td style="text-align: left">scroll lock</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right"><em>reserved</em></td>
-<td align="left">pause</td>
+<td style="text-align: right"></td>
+<td style="text-align: right"><em>reserved</em></td>
+<td style="text-align: left">pause</td>
 </tr>
 <tr>
-<td align="right">reboot</td>
-<td align="right">shutdown</td>
-<td align="left">F1</td>
+<td style="text-align: right">reboot</td>
+<td style="text-align: right">shutdown</td>
+<td style="text-align: left">F1</td>
 </tr>
 <tr>
-<td align="right">hibernate</td>
-<td align="right">sleep</td>
-<td align="left">F2</td>
+<td style="text-align: right">hibernate</td>
+<td style="text-align: right">sleep</td>
+<td style="text-align: left">F2</td>
 </tr>
 <tr>
-<td align="right">hibernate + reboot</td>
-<td align="right">display off</td>
-<td align="left">F3</td>
+<td style="text-align: right">hibernate + reboot</td>
+<td style="text-align: right">display off</td>
+<td style="text-align: left">F3</td>
 </tr>
 <tr>
-<td align="right">configure networking</td>
-<td align="right">calculator</td>
-<td align="left">F4</td>
+<td style="text-align: right">configure networking</td>
+<td style="text-align: right">calculator</td>
+<td style="text-align: left">F4</td>
 </tr>
 <tr>
-<td align="right">configure displays</td>
-<td align="right">switch active display<sup>[toggle]</sup></td>
-<td align="left">F5</td>
+<td style="text-align: right">configure displays</td>
+<td style="text-align: right">switch active display<sup>[toggle]</sup></td>
+<td style="text-align: left">F5</td>
 </tr>
 <tr>
-<td align="right">minimum brightness</td>
-<td align="right">lower brightness 10%</td>
-<td align="left">F6</td>
+<td style="text-align: right">minimum brightness</td>
+<td style="text-align: right">lower brightness 10%</td>
+<td style="text-align: left">F6</td>
 </tr>
 <tr>
-<td align="right">maximum brightness</td>
-<td align="right">raise brightness 10%</td>
-<td align="left">F7</td>
+<td style="text-align: right">maximum brightness</td>
+<td style="text-align: right">raise brightness 10%</td>
+<td style="text-align: left">F7</td>
 </tr>
 <tr>
-<td align="right">configure audio</td>
-<td align="right">mute<sup>[toggle]</sup></td>
-<td align="left">F8</td>
+<td style="text-align: right">configure audio</td>
+<td style="text-align: right">mute<sup>[toggle]</sup></td>
+<td style="text-align: left">F8</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right">lower volume 5%</td>
-<td align="left">F9</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">lower volume 5%</td>
+<td style="text-align: left">F9</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right">raise volume 5%</td>
-<td align="left">F10</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">raise volume 5%</td>
+<td style="text-align: left">F10</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right">randomize wallpaper</td>
-<td align="left">F11</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">randomize wallpaper</td>
+<td style="text-align: left">F11</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right"><em>reserved</em></td>
-<td align="left">F12</td>
+<td style="text-align: right"></td>
+<td style="text-align: right"><em>reserved</em></td>
+<td style="text-align: left">F12</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right"><strong>ctrl + alt +</strong></td>
-<td align="left"><strong>key</strong><sup>[special]</sup></td>
+<td style="text-align: right"></td>
+<td style="text-align: right"><strong>ctrl + alt +</strong></td>
+<td style="text-align: left"><strong>key</strong><sup>[special]</sup></td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right">task manager</td>
-<td align="left">delete</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">task manager</td>
+<td style="text-align: left">delete</td>
 </tr>
 <tr>
-<td align="right"></td>
-<td align="right">syslog</td>
-<td align="left">insert</td>
+<td style="text-align: right"></td>
+<td style="text-align: right">syslog</td>
+<td style="text-align: left">insert</td>
 </tr>
 </tbody>
 </table>
@@ -379,41 +380,41 @@ Primary modkey <code>Mod1</code> is super instead of alt.</p>
 <table>
 <thead>
 <tr>
-<th align="right">alt gr +</th>
-<th align="left">key</th>
-<th align="left">remarks</th>
+<th style="text-align: right">alt gr +</th>
+<th style="text-align: left">key</th>
+<th style="text-align: left">remarks</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="right">prior</td>
-<td align="left">up</td>
-<td align="left"></td>
+<td style="text-align: right">prior</td>
+<td style="text-align: left">up</td>
+<td style="text-align: left"></td>
 </tr>
 <tr>
-<td align="right">next</td>
-<td align="left">down</td>
-<td align="left"></td>
+<td style="text-align: right">next</td>
+<td style="text-align: left">down</td>
+<td style="text-align: left"></td>
 </tr>
 <tr>
-<td align="right">home</td>
-<td align="left">left</td>
-<td align="left"></td>
+<td style="text-align: right">home</td>
+<td style="text-align: left">left</td>
+<td style="text-align: left"></td>
 </tr>
 <tr>
-<td align="right">end</td>
-<td align="left">right</td>
-<td align="left"></td>
+<td style="text-align: right">end</td>
+<td style="text-align: left">right</td>
+<td style="text-align: left"></td>
 </tr>
 <tr>
-<td align="right">delete</td>
-<td align="left">backspace</td>
-<td align="left"></td>
+<td style="text-align: right">delete</td>
+<td style="text-align: left">backspace</td>
+<td style="text-align: left"></td>
 </tr>
 <tr>
-<td align="right">F11</td>
-<td align="left">delete</td>
-<td align="left">same as power key, keystroke repeat not available</td>
+<td style="text-align: right">F11</td>
+<td style="text-align: left">delete</td>
+<td style="text-align: left">same as power key, keystroke repeat not available</td>
 </tr>
 </tbody>
 </table>
@@ -537,29 +538,29 @@ Plaintext <code>chromium</code> configuration is an ongoing experiment of mine.<
 <thead>
 <tr>
 <th>non-interactive functionality</th>
-<th align="center">status</th>
+<th style="text-align: center">status</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>first-run config rebuild</td>
-<td align="center">works</td>
+<td style="text-align: center">works</td>
 </tr>
 <tr>
 <td>applying persistent chromium settings</td>
-<td align="center">works</td>
+<td style="text-align: center">works</td>
 </tr>
 <tr>
 <td>applying persistent chromium flags</td>
-<td align="center">works</td>
+<td style="text-align: center">works</td>
 </tr>
 <tr>
 <td>extension install on first-run</td>
-<td align="center">works <em>(via group policy)</em></td>
+<td style="text-align: center">works <em>(via group policy)</em></td>
 </tr>
 <tr>
 <td>applying persistent extension settings</td>
-<td align="center"><strong>no</strong></td>
+<td style="text-align: center"><strong>no</strong></td>
 </tr>
 </tbody>
 </table>
@@ -759,12 +760,12 @@ found in the current revision:</em></p>
 <li><code>xwin_widgets.sh v0.4</code></li>
 </ul>
 <p><em>Total on-disk size of the current revision is
-195.55KiB
+195.62KiB
 out of a total compressed git history size of
-723.02KiB.</em></p>
+723.51KiB.</em></p>
 </blockquote>
 <h1>Complete source listing<span id="Complete-source-listing"></span></h1>
-<pre><code><span class="term-prompt">root@b32e69c686e2</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
+<pre><code><span class="term-prompt">root@1479f6e65185</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
 -rw-r--r-- 1 8.3K   Dec 28 2021 23:10 rev. 125 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
 -rw-r--r-- 1 1.2K   Feb 18 2022 00:39 rev. 75  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts">.comforts</a>
 -rw-r--r-- 1  354   Dec  6 2021 18:11 rev. 7   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts-git">.comforts-git</a>
@@ -883,10 +884,10 @@ lrwxrwxrwx 1   27  .local/lib/path-gitstatus -> ../../Scripts/git_status.sh
 -rwxr-xr-x 1 1.4K   Dec  3 2021 23:13 rev. 19  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
 -rwxr-xr-x 1 3.0K   Dec 13 2021 02:28 rev. 17  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_widgets.sh">Scripts/xwin_widgets.sh</a>
 -rw-r--r-- 1 1.9K   Feb 11 2022 01:19 rev. 4   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Userscripts/youtube_screenshot.user.js">Userscripts/youtube_screenshot.user.js</a>
--rw-r--r-- 1  22K   Feb 21 2022 23:35 rev. 173 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
+-rw-r--r-- 1  22K   Feb 26 2022 14:00 rev. 174 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
 </code></pre>
 <!-- created Mon, 19 Aug 2019 22:48:18 -0700 -->
-<!-- updated Fri, 25 Feb 2022 20:11:29 -0800 -->
+<!-- updated Sat, 26 Feb 2022 14:00:21 -0800 -->
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
@@ -898,7 +899,7 @@ lrwxrwxrwx 1   27  .local/lib/path-gitstatus -> ../../Scripts/git_status.sh
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
 	— &#169; 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
-	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.1 — static microblog processor</a></p>
+	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.2 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
 </body>
