--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -30,11 +30,79 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.6.2 — static microblog processor-->
+<!--kagami v0.6.3 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
 <p><strong>Revision No. 802, commit <code>6247ddf</code>.</strong></p>
 <p><strong>“Nothing important”</strong></p>
-<p><div class="toc"><p>Table of Contents</p><ul><li><a href="#Selected-documentation-and-usage-notes-for-my-dotfiles">Selected documentation and usage notes for my dotfiles</a></li><li><a href="#_dotfilesatelier_"><em>dotfiles—“atelier”</em></a></li><li><a href="#Quick-start">Quick start</a><ul><li><a href="#Quick-start-on-Termux-for-Android">Quick start on Termux for Android</a></li><li><a href="#Notes-on-platform-support">Notes on platform support</a></li></ul></li><li><a href="#Usage-notes">Usage notes</a><ul><li><a href="#Using-git-meta">Using <code>git meta</code></a></li><li><a href="#Using-.once.d-post-install-scripts">Using <code>~/.once.d</code> post-install scripts</a><ul><li><a href="#Essential-and-optional-package-groups">Essential and *optional package groups</a></li><li><a href="#Essential-and-persistent-upstream-utilities">Essential and *persistent upstream utilities</a></li></ul></li><li><a href="#Window-manager">Window manager</a><ul><li><a href="#Reduced-layout-for-Chromebooks">Reduced layout for Chromebooks</a></li></ul></li></ul></li><li><a href="#Some-environment-notes">Some environment notes</a><ul><li><a href="#X-server-invocation">X server invocation</a></li><li><a href="#Optional-X-Window-configuration">Optional X Window configuration</a><ul><li><a href="#.xrandr"><code>~/.xrandr</code></a></li><li><a href="#.xdecor"><code>~/.xdecor</code></a></li></ul></li><li><a href="#X-resources-and-theming">X resources and theming</a><ul><li><a href="#List-of-available-macros">List of available macros</a></li></ul></li><li><a href="#Issues-with-HiDPI-scaling">Issues with HiDPI scaling</a></li></ul></li><li><a href="#Non-standard-commands">Non-standard commands</a><ul><li><a href="#cd"><code>cd</code></a></li><li><a href="#chromium"><code>chromium</code></a><ul><li><a href="#Managed-policy-overrides">Managed policy overrides</a></li><li><a href="#Configuring-Vimium">Configuring Vimium</a></li><li><a href="#An-ongoing-experiment">An ongoing experiment</a></li></ul></li><li><a href="#git"><code>git</code></a></li><li><a href="#nano"><code>nano</code></a></li><li><a href="#notify-send"><code>notify-send</code></a></li><li><a href="#sc-spreadsheet-calculator"><code>sc</code> (spreadsheet calculator)</a><ul><li><a href="#sc-pre-run-macro-example"><code>sc</code> pre-run macro example</a></li></ul></li></ul></li><li><a href="#Downloads">Downloads</a></li><li><a href="#Complete-source-listing">Complete source listing</a></li></ul></div></p>
+<p><div class="toc">
+<p>Table of Contents</p>
+<ul>
+<li><a href="#Selected-documentation-and-usage-notes-for-my-dotfiles">Selected documentation and usage notes for my dotfiles</a></li>
+<li><a href="#_dotfilesatelier_"><em>dotfiles—“atelier”</em></a></li>
+<li><a href="#Quick-start">Quick start</a>
+<ul>
+<li><a href="#Quick-start-on-Termux-for-Android">Quick start on Termux for Android</a></li>
+<li><a href="#Notes-on-platform-support">Notes on platform support</a></li>
+</ul>
+</li>
+<li><a href="#Usage-notes">Usage notes</a>
+<ul>
+<li><a href="#Using-git-meta">Using <code>git meta</code></a></li>
+<li><a href="#Using-.once.d-post-install-scripts">Using <code>~/.once.d</code> post-install scripts</a>
+<ul>
+<li><a href="#Essential-and-optional-package-groups">Essential and *optional package groups</a></li>
+<li><a href="#Essential-and-persistent-upstream-utilities">Essential and *persistent upstream utilities</a></li>
+</ul>
+</li>
+<li><a href="#Window-manager">Window manager</a>
+<ul>
+<li><a href="#Reduced-layout-for-Chromebooks">Reduced layout for Chromebooks</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="#Some-environment-notes">Some environment notes</a>
+<ul>
+<li><a href="#X-server-invocation">X server invocation</a></li>
+<li><a href="#Optional-X-Window-configuration">Optional X Window configuration</a>
+<ul>
+<li><a href="#.xrandr"><code>~/.xrandr</code></a></li>
+<li><a href="#.xdecor"><code>~/.xdecor</code></a></li>
+</ul>
+</li>
+<li><a href="#X-resources-and-theming">X resources and theming</a>
+<ul>
+<li><a href="#List-of-available-macros">List of available macros</a></li>
+</ul>
+</li>
+<li><a href="#Issues-with-HiDPI-scaling">Issues with HiDPI scaling</a></li>
+</ul>
+</li>
+<li><a href="#Non-standard-commands">Non-standard commands</a>
+<ul>
+<li><a href="#cd"><code>cd</code></a></li>
+<li><a href="#chromium"><code>chromium</code></a>
+<ul>
+<li><a href="#Managed-policy-overrides">Managed policy overrides</a></li>
+<li><a href="#Configuring-Vimium">Configuring Vimium</a></li>
+<li><a href="#An-ongoing-experiment">An ongoing experiment</a></li>
+</ul>
+</li>
+<li><a href="#git"><code>git</code></a></li>
+<li><a href="#nano"><code>nano</code></a></li>
+<li><a href="#notify-send"><code>notify-send</code></a></li>
+<li><a href="#sc-spreadsheet-calculator"><code>sc</code> (spreadsheet calculator)</a>
+<ul>
+<li><a href="#sc-pre-run-macro-example"><code>sc</code> pre-run macro example</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="#Downloads">Downloads</a></li>
+<li><a href="#Complete-source-listing">Complete source listing</a></li>
+</ul>
+</div>
+</p>
 <p>The verbosity factor of this document compared to comment lines of code
 in this repo is about <strong>5:1</strong>.</p>
 <p>If this document is <em>21.9KiB</em> in
@@ -899,7 +967,7 @@ lrwxrwxrwx 1   27  .local/lib/path-gitstatus -> ../../Scripts/git_status.sh
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
 	— &#169; 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
-	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.2 — static microblog processor</a></p>
+	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.3 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
 </body>
