XHTML 1.0 strict validation

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 <head>
-	<meta charset="UTF-8"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="theme-color" content="{ACCENT_COLOR}"/>
 	<meta name="description" content="{SITE_DESCRIPTION}"/>
 	<meta name="keywords" content="{KEYWORDS}"/>
