--- a/notes/why-copyleft.htm
+++ b/notes/why-copyleft.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 <head>
-	<meta charset="UTF-8"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="theme-color" content="#E2FAF9"/>
 	<meta name="description" content="the echoes of time stand still"/>
 	<meta name="keywords" content="unix, linux, gnu/linux, debian, computers, computing, shell scripting, dotfiles, scripting, programming, metaprogramming, documentation, foss, open source, free software, git, github, moon phase, teal, cyan, pink, starry night skies, pastel, anime, music, iridescent, sibilant, sentimental, microsounds, eternity, jealosy, decay, 2007 is eternal, now and forever, lucky star, vocaloid, hatsune miku, 初音ミク, 39, sankyuu, shimeji, japan, weeaboo, weeb, old web, web 1.0, neocities, geocities, blog, microblog, static website, personal website"/>
@@ -30,7 +30,7 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.6.3 — static microblog processor-->
+<!--kagami v0.6.4 — static microblog processor-->
 <!-- posted 2022/2/5 -->
 <p><span class="right">🌖 Sat, Feb 5th, 2022</span></p>
 <h1>On Copyleft and why I use GPLv3<span id="On-Copyleft-and-why-I-use-GPLv3"></span></h1>
@@ -87,7 +87,7 @@ You should reject permissive licenses in all their forms, and spit on all their 
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
 	— &#169; 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
-	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.3 — static microblog processor</a></p>
+	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.4 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
 </body>
