towards XHTML5 validation

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta charset="UTF-8"/>
 	<meta name="theme-color" content="{ACCENT_COLOR}"/>
 	<meta name="description" content="{SITE_DESCRIPTION}"/>
 	<meta name="keywords" content="{KEYWORDS}"/>
@@ -16,7 +16,9 @@
 <body>
 <audio hidden="hidden" id="bgm"></audio>
 <div class="navbar">
-	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"/></a>
+	<a href="{DOC_ROOT}/index.htm">
+		<img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"/>
+	</a>
 	<div class="container">
 		<div class="title"><a href="{DOC_ROOT}/index.htm">{SITE_TITLE}</a></div>
 		<div class="subtitle">{SITE_DESCRIPTION}</div>
