--- a/notes/why-copyleft.htm
+++ b/notes/why-copyleft.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta charset="UTF-8"/>
 	<meta name="theme-color" content="#E2FAF9"/>
 	<meta name="description" content="the echoes of time stand still"/>
 	<meta name="keywords" content="unix, linux, gnu/linux, debian, computers, computing, shell scripting, dotfiles, scripting, programming, metaprogramming, documentation, foss, open source, free software, git, github, moon phase, teal, cyan, pink, starry night skies, pastel, anime, music, iridescent, sibilant, sentimental, microsounds, eternity, jealosy, decay, 2007 is eternal, now and forever, lucky star, vocaloid, hatsune miku, 初音ミク, 39, sankyuu, shimeji, japan, weeaboo, weeb, old web, web 1.0, neocities, geocities, blog, microblog, static website, personal website"/>
@@ -16,7 +16,9 @@
 <body>
 <audio hidden="hidden" id="bgm"></audio>
 <div class="navbar">
-	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"/></a>
+	<a href="/index.htm">
+		<img class="avatar" alt="avatar" src="/static/avatar.png"/>
+	</a>
 	<div class="container">
 		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
 		<div class="subtitle">the echoes of time stand still</div>
